--- a/infoskjerm_style.css
+++ b/infoskjerm_style.css
@@ -29,9 +29,14 @@ h1#upchead {
 	background-color: #FF0000;
 }
 
+h1#evtitle {
+	font-family: "Arial", Arial, Sans-serif; 
+	font-size: 6em;
+}
+
 h1 {
 	font-family: "Arial", Arial, Sans-serif; 
-	font-size: 3.5em;
+	font-size: 3em;
 }
 
 p {
